--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -6,7 +6,7 @@
 
 <mat-accordion>
     @for (todo of todos(); track todo.id) {
-    @if (todo(); as todo) {
+    <!-- @if (todo(); as todo) { -->
     <mat-expansion-panel hideToggle>
       <mat-expansion-panel-header>
         <mat-panel-title>
@@ -26,7 +26,7 @@
         <mat-tab label="Extra"> AI generating... How to do this task...</mat-tab>
       </mat-tab-group>
     </mat-expansion-panel>
-    }
+    <!-- } -->
     }
   </mat-accordion>
   <button mat-fab matTooltip="Primary" color="primary"
